# lucid

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/alembic/: env.py
src/api/: api_router.py  deps.py
src/api/endpoints/: post.py  user.py
src/config/: sample.env  settings.py
src/crud/: base.py  crud_post.py  crud_user.py  in_memory.py
src/db/: __init__.py  session.py
src/exceptions/: __init__.py  base_exception.py  exception_result.py  post_exception.py  user_exception.py
src/extras/: response_model.py  security.py
src/models/: __init__.py  base.py  post.py  user.py
src/schemas/: __init__.py  base.py  post.py  user.py
src/tests/: conftest.py
src/tests/test_api/: test_auth.py
